// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`typescript > should lint 'typescript/adjacent-overload-signatur…' 1`] = `
[
  {
    "column": 3,
    "line": 26,
    "message": "Function implementation is missing or not immediately following the declaration.",
    "rule": "TS(2391)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/array-type' 1`] = `
[
  {
    "column": 12,
    "line": 3,
    "message": "Array type using 'Array<number>' is forbidden. Use 'number[]' instead.",
    "rule": "typescript(array-type)",
    "severity": "warning",
  },
  {
    "column": 20,
    "line": 4,
    "message": "Array type using 'ReadonlyArray<number>' is forbidden. Use 'readonly number[]' instead.",
    "rule": "typescript(array-type)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/class-literal-property-sty…' 1`] = `[]`;

exports[`typescript > should lint 'typescript/consistent-generic-constru…' 1`] = `[]`;

exports[`typescript > should lint 'typescript/consistent-type-assertions' 1`] = `
[
  {
    "column": 15,
    "line": 3,
    "message": "Use \`as Foo\` instead of \`<Foo>\`.",
    "rule": "typescript(consistent-type-assertions)",
    "severity": "warning",
  },
  {
    "column": 13,
    "line": 5,
    "message": "Always prefer \`const x: T = { ... }\`.",
    "rule": "typescript(consistent-type-assertions)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/consistent-type-definitions' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Use \`interface\` instead of \`type\`.",
    "rule": "typescript(consistent-type-definitions)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/no-confusing-non-null-asse…' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "Confusing combinations of non-null assertion and equal test like \`a! == b\`, which looks very similar to not equal \`a !== b\`.",
    "rule": "typescript(no-confusing-non-null-assertion)",
    "severity": "error",
  },
  {
    "column": 4,
    "line": 5,
    "message": "Confusing combinations of non-null assertion and equal test like \`a! === b\`, which looks very similar to not equal \`a !=== b\`.",
    "rule": "typescript(no-confusing-non-null-assertion)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-duplicate-enum-values' 1`] = `
[
  {
    "column": 9,
    "line": 4,
    "message": "Duplicate enum value \`0\`",
    "rule": "typescript(no-duplicate-enum-values)",
    "severity": "error",
  },
  {
    "column": 9,
    "line": 9,
    "message": "Duplicate enum value \`'A'\`",
    "rule": "typescript(no-duplicate-enum-values)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-dynamic-delete' 1`] = `
[
  {
    "column": 1,
    "line": 4,
    "message": "Do not delete dynamically computed property keys.",
    "rule": "typescript(no-dynamic-delete)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-empty-object-type' 1`] = `
[
  {
    "column": 16,
    "line": 3,
    "message": "Do not use the empty object type literal.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 15,
    "line": 4,
    "message": "Do not use the empty object type literal.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 22,
    "line": 5,
    "message": "Do not use an empty interface declaration.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 21,
    "line": 6,
    "message": "Do not use an empty interface declaration.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 7,
    "message": "Use \`interface\` instead of \`type\`.",
    "rule": "typescript(consistent-type-definitions)",
    "severity": "warning",
  },
  {
    "column": 19,
    "line": 7,
    "message": "Do not use the empty object type literal.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 8,
    "message": "Use \`interface\` instead of \`type\`.",
    "rule": "typescript(consistent-type-definitions)",
    "severity": "warning",
  },
  {
    "column": 18,
    "line": 8,
    "message": "Do not use the empty object type literal.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/no-extra-non-null-assertion' 1`] = `[]`;

exports[`typescript > should lint 'typescript/no-extraneous-class' 1`] = `
[
  {
    "column": 7,
    "line": 3,
    "message": "Unexpected class with only static properties.",
    "rule": "typescript(no-extraneous-class)",
    "severity": "warning",
  },
  {
    "column": 18,
    "line": 4,
    "message": "Literals should be exposed using getters.",
    "rule": "typescript(class-literal-property-style)",
    "severity": "warning",
  },
  {
    "column": 9,
    "line": 11,
    "message": "Unexpected class with only a constructor.",
    "rule": "typescript(no-extraneous-class)",
    "severity": "warning",
  },
  {
    "column": 3,
    "line": 17,
    "message": "Unexpected empty class.",
    "rule": "typescript(no-extraneous-class)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/no-invalid-void-type' 1`] = `
[
  {
    "column": 24,
    "line": 3,
    "message": "Use \`void\` only as a return type or generic type argument.",
    "rule": "typescript(no-invalid-void-type)",
    "severity": "error",
  },
  {
    "column": 14,
    "line": 4,
    "message": "Use \`void\` only as a return type or generic type argument.",
    "rule": "typescript(no-invalid-void-type)",
    "severity": "error",
  },
  {
    "column": 23,
    "line": 5,
    "message": "Remove \`void\` from this union type constituent.",
    "rule": "typescript(no-invalid-void-type)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-misused-new' 1`] = `
[
  {
    "column": 3,
    "line": 4,
    "message": "Class cannot have method named \`new\`.",
    "rule": "typescript(no-misused-new)",
    "severity": "error",
  },
  {
    "column": 3,
    "line": 8,
    "message": "Interfaces cannot be constructed, only classes.",
    "rule": "typescript(no-misused-new)",
    "severity": "error",
  },
  {
    "column": 3,
    "line": 8,
    "message": "Enforce using function types instead of interfaces with call signatures.",
    "rule": "typescript(prefer-function-type)",
    "severity": "warning",
  },
  {
    "column": 3,
    "line": 12,
    "message": "Interfaces cannot be constructed, only classes.",
    "rule": "typescript(no-misused-new)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-namespace' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "ES2015 module syntax is preferred over namespaces.",
    "rule": "typescript(no-namespace)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 3,
    "message": "Use \`namespace\` instead of \`module\` to declare custom TypeScript modules.",
    "rule": "typescript(prefer-namespace-keyword)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 4,
    "message": "ES2015 module syntax is preferred over namespaces.",
    "rule": "typescript(no-namespace)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 5,
    "message": "Use \`namespace\` instead of \`module\` to declare custom TypeScript modules.",
    "rule": "typescript(prefer-namespace-keyword)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-non-null-asserted-nulli…' 1`] = `[]`;

exports[`typescript > should lint 'typescript/no-non-null-asserted-optio…' 1`] = `
[
  {
    "column": 9,
    "line": 3,
    "message": "Optional chain expressions can return undefined by design: using a non-null assertion is unsafe and wrong.",
    "rule": "typescript(no-non-null-asserted-optional-chain)",
    "severity": "error",
  },
  {
    "column": 11,
    "line": 4,
    "message": "Optional chain expressions can return undefined by design: using a non-null assertion is unsafe and wrong.",
    "rule": "typescript(no-non-null-asserted-optional-chain)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-require-imports' 1`] = `
[
  {
    "column": 14,
    "line": 3,
    "message": "Expected "import" statement instead of "require" call",
    "rule": "typescript(no-require-imports)",
    "severity": "error",
  },
  {
    "column": 18,
    "line": 4,
    "message": "Expected "import" statement instead of "require" call",
    "rule": "typescript(no-require-imports)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 5,
    "message": "Expected "import" statement instead of "require" call",
    "rule": "typescript(no-require-imports)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-this-alias' 1`] = `
[
  {
    "column": 7,
    "line": 3,
    "message": "Unexpected aliasing of 'this' to local variable.",
    "rule": "typescript(no-this-alias)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/no-unnecessary-type-constr…' 1`] = `
[
  {
    "column": 18,
    "line": 3,
    "message": "constraining the generic type "T" to "any" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
  {
    "column": 33,
    "line": 3,
    "message": "Do not use an empty interface declaration.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 22,
    "line": 4,
    "message": "constraining the generic type "T" to "unknown" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
  {
    "column": 41,
    "line": 4,
    "message": "Do not use an empty interface declaration.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 6,
    "message": "Use \`interface\` instead of \`type\`.",
    "rule": "typescript(consistent-type-definitions)",
    "severity": "warning",
  },
  {
    "column": 13,
    "line": 6,
    "message": "constraining the generic type "T" to "any" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
  {
    "column": 30,
    "line": 6,
    "message": "Do not use the empty object type literal.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 7,
    "message": "Use \`interface\` instead of \`type\`.",
    "rule": "typescript(consistent-type-definitions)",
    "severity": "warning",
  },
  {
    "column": 17,
    "line": 7,
    "message": "constraining the generic type "T" to "unknown" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
  {
    "column": 38,
    "line": 7,
    "message": "Do not use the empty object type literal.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 18,
    "line": 9,
    "message": "constraining the generic type "T" to "any" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
  {
    "column": 18,
    "line": 11,
    "message": "constraining the generic type "T" to "any" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
  {
    "column": 14,
    "line": 13,
    "message": "constraining the generic type "T" to "any" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
  {
    "column": 10,
    "line": 14,
    "message": "constraining the generic type "U" to "any" does nothing and is unnecessary",
    "rule": "typescript(no-unnecessary-type-constraint)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/no-unsafe-declaration-merg…' 1`] = `
[
  {
    "column": 11,
    "line": 3,
    "message": "Unsafe declaration merging between classes and interfaces.",
    "rule": "typescript(no-unsafe-declaration-merging)",
    "severity": "warning",
  },
  {
    "column": 15,
    "line": 3,
    "message": "Do not use an empty interface declaration.",
    "rule": "typescript(no-empty-object-type)",
    "severity": "warning",
  },
  {
    "column": 1,
    "line": 4,
    "message": "Unexpected empty class.",
    "rule": "typescript(no-extraneous-class)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/no-useless-empty-export' 1`] = `
[
  {
    "column": 1,
    "line": 4,
    "message": "Empty exports do nothing in module files",
    "rule": "typescript(no-useless-empty-export)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/prefer-as-const' 1`] = `
[
  {
    "column": 10,
    "line": 3,
    "message": "Expected a \`const\` assertion instead of a literal type annotation.",
    "rule": "typescript(prefer-as-const)",
    "severity": "warning",
  },
  {
    "column": 27,
    "line": 4,
    "message": "Expected a \`const\` assertion instead of a literal type annotation.",
    "rule": "typescript(prefer-as-const)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/prefer-for-of' 1`] = `
[
  {
    "column": 6,
    "line": 3,
    "message": "Expected a \`for...of\` loop instead of a \`for\` loop with this simple iteration.",
    "rule": "typescript(prefer-for-of)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/prefer-function-type' 1`] = `
[
  {
    "column": 3,
    "line": 4,
    "message": "Enforce using function types instead of interfaces with call signatures.",
    "rule": "typescript(prefer-function-type)",
    "severity": "warning",
  },
  {
    "column": 25,
    "line": 7,
    "message": "Enforce using function types instead of interfaces with call signatures.",
    "rule": "typescript(prefer-function-type)",
    "severity": "warning",
  },
  {
    "column": 3,
    "line": 12,
    "message": "Enforce using function types instead of interfaces with call signatures.",
    "rule": "typescript(prefer-function-type)",
    "severity": "warning",
  },
]
`;

exports[`typescript > should lint 'typescript/prefer-literal-enum-member' 1`] = `
[
  {
    "column": 3,
    "line": 6,
    "message": "Explicit enum values must only be literal values (string, number, boolean, etc.).",
    "rule": "typescript(prefer-literal-enum-member)",
    "severity": "error",
  },
  {
    "column": 3,
    "line": 8,
    "message": "Explicit enum values must only be literal values (string, number, boolean, etc.).",
    "rule": "typescript(prefer-literal-enum-member)",
    "severity": "error",
  },
  {
    "column": 3,
    "line": 9,
    "message": "Explicit enum values must only be literal values (string, number, boolean, etc.).",
    "rule": "typescript(prefer-literal-enum-member)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/prefer-namespace-keyword' 1`] = `
[
  {
    "column": 1,
    "line": 3,
    "message": "ES2015 module syntax is preferred over namespaces.",
    "rule": "typescript(no-namespace)",
    "severity": "error",
  },
  {
    "column": 1,
    "line": 3,
    "message": "Use \`namespace\` instead of \`module\` to declare custom TypeScript modules.",
    "rule": "typescript(prefer-namespace-keyword)",
    "severity": "error",
  },
]
`;

exports[`typescript > should lint 'typescript/triple-slash-reference' 1`] = `[]`;

exports[`typescript > should lint 'typescript/unified-signatures' 1`] = `
[
  {
    "column": 12,
    "line": 4,
    "message": "These overloads can be combined into one signature taking \`number | string\`.",
    "rule": "typescript(unified-signatures)",
    "severity": "error",
  },
]
`;
